[package]
name = "keyborg"
version = "0.1.0"
edition = "2021"

[dependencies]
web-sys = { version = "0.3.70", features = [
    "Document",
    "CustomEvent",
    "CustomEventInit",
    "console",
    "FocusEvent",
    "KeyboardEvent",
    "MouseEvent",
    "HtmlElement",
    "Window",
    "ShadowRoot",
] }
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
gloo-events = "0.2.0"
gloo-timers = "0.3.0"
send_wrapper = "0.6.0"